--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<!-- Fontes utilizadas no site-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa|Amatic+SC">
 
+
 	<!-- Arquivo de estilo do site-->
 	<link rel = "stylesheet" href = "css/style.css">
 
@@ -45,13 +46,15 @@
 <body>
 	<!-- Conteúdo da página principal, divido em cabeçalho, content e botões-->
 	<div id = "cabecalho">
-	<center><img src = "img/imagem_cabecalho.webp"></center>
+	<center><img src = "./Assets/img/imagem_cabecalho.webp"></center>
 	</div>
 	<div id = "content">
-	<h2>Bem vindo a esta narrativa interativa!</h2>
-	<h3>Aqui está o texto inicial da narrativa. O texto a seguir, é uma ideia para o texto de apresentação ao interator.</h3>
-    <h3>Em um jogo de interpretação com o mestre-de-jogo presente, ele geralmente não dá dicas sobre quais opções um personagem pode seguir, o mestre-de-jogo apenas vai contando a história e cabe ao jogador imaginar a situação, calcular as opções e falar a sua decisão ao mestre-de-jogo.</h3>
-    <h3>Adaptando essa conversa para a escrita, enquanto a história foi escrita, foram previstas algumas alternativas que um jogador imaginaria e você pode escolher qual caminho seguir escolhendo o texto a ser lido.</h3>
+	<h2>A Caverna da Perdição</h2>
+	<h3>A Caverna da Perdição é ambientado em um mundo de fantasia medieval onde magia e misticismo permeiam todos os aspectos da vida. Nesse cenário, a magia não é apenas uma ferramenta extraordinária, mas parte essencial do cotidiano, empregada por estudiosos em suas torres de marfim, clérigos em rituais sagrados e até por camponeses em tarefas simples, como acelerar colheitas ou iluminar noites escuras. Criaturas fantásticas e etnias míticas, como elfos, anões, tieflings e outras raças híbridas, coexistem com os humanos, formando uma sociedade vibrante e repleta de alianças, rivalidades e intrigas.</h3>
+    <h3>Nesta aventura, você assume o papel de Thaynara, uma aventureira novata tentando provar seu valor. Contra o conselho de seus superiores, você decide explorar sozinha uma caverna enigmática e cheia de mistérios, em busca de artefatos mágicos para seus estudos. Dizem que esse local abriga uma montanha de tesouros, mas também é cercado por lendas sombrias de aventureiros que nunca retornaram.</h3>
+    <h3>Com cada curva e bifurcação, escolhas difíceis testarão sua coragem, inteligência e determinação. Será você capaz de sobreviver aos perigos da caverna, desenterrar seus segredos e sair com vida para contar a história? Ou será apenas mais um nome esquecido nos registros da Guilda dos Aventureiros?</h3>
+	<h4>Aviso de Conteúdo Sensível</h4>
+	<h5>Este jogo contém descrições detalhadas de violência, incluindo cenas que podem envolver ferimentos, combates, morte ou situações intensas e perturbadoras. O conteúdo pode não ser adequado para todos os públicos. Jogue com responsabilidade.</h5>
 	<center><input type="button" id = "button0" class="button button0" data-destination="introducao" name="choices" value="Comece a aventura!"></center>
 	<center><input type="button" id = "button1" class="button button1" data-destination="" name="choices" value="Outras Narrativas?"></center>
 	<center><input type="button" id = "button2" class="button button2" data-destination="instrucoes" name="choices" value="Quer saber como jogar?"></center>
@@ -81,8 +84,7 @@
 	</div>
 	<!-- Trecho para carregar a música-->
 	<audio id="player" autoplay="autoplay" loop="loop">
-	  <source src="music/Trecho_Espionage__Fox_amp_Mew.mp3" type="audio/mp3" />
-	  seu navegador não suporta HTML5
+	 
 	</audio>
 	</center>
 </body> 
