--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 	<!-- Conteúdo da página principal, divido em cabeçalho, content e botões-->
 	<div id = "cabecalho">
-	<center><img src = "./Assets/img/imagem_cabecalho.webp"></center>
+	<center><img src = "./Assets/img/capa jogo.jpg"></center>
 	</div>
 	<div id = "content">
 	<h2>A Caverna da Perdição</h2>
