--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 
 	<!-- Título da narrativa-->
-	<title>Título da Narrativa</title>
+	<title>A Caverna da Perdição</title>
 
 	<!-- Descrição do conteúdo do site e palavras-chave-->
 	<meta name="description" content="Contém a descrição que os mecanismos de busca utilizam para procura da página."/>
@@ -32,9 +32,9 @@
 
 			//Trecho que carrega a imgaem da ficha de personagem e título (HMTL)
 			modal.style.display="block";
-			modalImg.src="img/ficha_em_branco.webp";
-			modalImg.alt="Ficha em branco do OPERA RPG";
-			captionTexto.innerHTML="Ficha em Branco";
+			modalImg.src="Assets/img/ficha.jpg";
+			modalImg.alt="Ficha Thaynara";
+			captionTexto.innerHTML="Ficha Thaynara";
 
 			btFechar.onclick=function()
 			{
@@ -84,7 +84,7 @@
 	</div>
 	<!-- Trecho para carregar a música-->
 	<audio id="player" autoplay="autoplay" loop="loop">
-	 
+		<source src="Assets/music/636108__fonografico__ambience-cave.ogg" type="audio/mp3" />
 	</audio>
 	</center>
 </body> 
