--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			//Trecho que carrega a imgaem da ficha de personagem e título (HMTL)
 			modal.style.display="block";
-			modalImg.src="Assets/img/ficha.jpg";
+			modalImg.src="img/ficha.jpg";
 			modalImg.alt="Ficha Thaynara";
 			captionTexto.innerHTML="Ficha Thaynara";
 
@@ -46,7 +46,7 @@
 <body>
 	<!-- Conteúdo da página principal, divido em cabeçalho, content e botões-->
 	<div id = "cabecalho">
-	<center><img src = "./Assets/img/capa jogo.jpg"></center>
+	<center><img src = "img/capa jogo.jpg"></center>
 	</div>
 	<div id = "content">
 	<h2>A Caverna da Perdição</h2>
