--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>A Caverna da Perdição</title>
 
 	<!-- Descrição do conteúdo do site e palavras-chave-->
-	<meta name="description" content="Contém a descrição que os mecanismos de busca utilizam para procura da página."/>
+	<meta name="description" content="Você interpreterá a personagem Thaynara, uma aventureira novata tentando provar seu valor em um mundo de fantasia medieval"/>
 
 	<!-- Fontes utilizadas no site-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa|Amatic+SC">
